<resources>
    <string name="app_name">PokeWorld</string>

<!--    Navigation Drawer-->
    <string name="pokedex">Pokedex</string>
    <string name="berries">Berries</string>
    <string name="generations">Generations</string>
    <string name="items">Items</string>
    <string name="locations">Locations</string>
    <string name="machines">Machines</string>
    <string name="moves">Moves</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
</resources>