<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pokedex"
            android:icon="@drawable/ic_pokedex"
            android:title="@string/pokedex" />
        <item
            android:id="@+id/nav_generations"
            android:icon="@drawable/ic_pokeball"
            android:title="@string/generations" />
        <item
            android:id="@+id/nav_moves"
            android:icon="@drawable/ic_pokeball"
            android:title="@string/moves" />
        <item
            android:id="@+id/nav_machines"
            android:icon="@drawable/ic_pokeball"
            android:title="@string/machines" />
        <item
            android:id="@+id/nav_items"
            android:icon="@drawable/ic_pokeball"
            android:title="@string/items" />
        <item
            android:id="@+id/nav_berries"
            android:icon="@drawable/ic_pokeball"
            android:title="@string/berries" />
        <item
            android:id="@+id/nav_locations"
            android:icon="@drawable/ic_pokeball"
            android:title="@string/locations" />
    </group>
</menu>